@@ -23,9 +23,6 @@ Global
 		$0.VersionControlPolicy = $2
 		$2.inheritsSet = Mono
 		$0.ChangeLogPolicy = $3
-		$3.UpdateMode = ProjectRoot
-		$3.MessageStyle = $4
-		$4.LineAlign = 0
 		$3.inheritsSet = Mono
 		outputpath = ..\builds
 	EndGlobalSection
