@@ -27,6 +27,19 @@ namespace ZENReports
 				return true;
 			return false;
 		}		
+		
+		/// <summary>
+		/// Returns remaining string after the specified character
+		/// </summary>
+		/// <param name="source">
+		/// A <see cref="System.String"/>
+		/// </param>
+		/// <param name="value">
+		/// A <see cref="System.String"/>
+		/// </param>
+		/// <returns>
+		/// A <see cref="System.String"/>
+		/// </returns>
         public static string SubstringAfter(this string source, string value)
         {
             if (string.IsNullOrEmpty(value))
@@ -43,6 +56,18 @@ namespace ZENReports
             return source.Substring(index + value.Length);            
         }
 
+		/// <summary>
+		/// Returns the string values before the character specified
+		/// </summary>
+		/// <param name="source">
+		/// A <see cref="System.String"/>
+		/// </param>
+		/// <param name="value">
+		/// A <see cref="System.String"/>
+		/// </param>
+		/// <returns>
+		/// A <see cref="System.String"/>
+		/// </returns>
         public static string SubstringBefore(this string source, string value)
         {
             if (string.IsNullOrEmpty(value))
